apps/unifi/unifi/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi
  labels:
    app: unifi
