apps/unifi/unifi/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  namespace: unifi
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: unifi
          image: ghcr.io/goofball222/unifi:10.6@sha256:48699a2dd873538bf8b48413694c6e231d64644f5ad9266b6f24d74b2963390e
          command:
            - /bin/sh
            - -c
            - |
              cp /usr/lib/jvm/java-17-openjdk-arm64/lib/security/cacerts /trust/cacerts
              keytool -importcert -noprompt \
                -alias mongo-ca \
                -file /ca/tls.crt \
                -keystore /trust/cacerts \
                -storepass changeit
              docker-entrypoint.sh unifi
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8880
              protocol: TCP
            - containerPort: 8843
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: unifi-data
              mountPath: /usr/lib/unifi/cert
              subPath: cert
            - name: unifi-data
              mountPath: /usr/lib/unifi/data
              subPath: data
            - name: unifi-data
              mountPath: /usr/lib/unifi/logs
              subPath: logs
            - name: certs
              mountPath: /usr/lib/unifi/cert/cert.pem
              subPath: tls.crt
            - name: certs
              mountPath: /usr/lib/unifi/cert/privkey.pem
              subPath: tls.key
            - name: mongo-ca
              mountPath: /ca
              readOnly: true
            - name: tmp
              mountPath: /tmp
              subPath: tmp
            - name: tmp
              mountPath: /usr/lib/unifi/run
              subPath: run
            - name: tmp
              mountPath: /trust
              subPath: trust
          resources:
            requests:
              memory: 1200Mi
              cpu: 20m
            limits:
              cpu: 700m
              memory: 1200Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
        - name: backup-cleaner
          image: ghcr.io/home-operations/k8s-sidecar:2.14.1@sha256:6daa733e73ffb67be9f33ca6fd4b46aad2b0c937ed8085cf51e2709f9848a923
          command: ["/usr/local/bin/cleanup.sh"]
          volumeMounts:
            - name: unifi-data
              mountPath: /usr/lib/unifi/data
              subPath: data
            - name: cleanup-script
              mountPath: /usr/local/bin/cleanup.sh
              subPath: cleanup.sh
              readOnly: true
            - name: tmp
              mountPath: /tmp
              subPath: tmp
          resources:
            requests:
              memory: 50Mi
              cpu: "20m"
            limits:
              cpu: "200m"
              memory: 50Mi
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: unifi-data
          persistentVolumeClaim:
            claimName: unifi-pvc
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
        - name: certs
          secret:
            secretName: unifi-cert
        - name: tmp
          emptyDir: {}
        - name: cleanup-script
          configMap:
            name: cleanup-script
            defaultMode: 0755
        - name: mongo-ca
          secret:
            secretName: tls-ca-key-pair
