apps/unifi/unifi/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-inform
  namespace: unifi
spec:
  selector:
    app: unifi
  ports:
    - protocol: TCP
      port: 8080
      name: deviceappcomms
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-ui
  namespace: unifi
spec:
  selector:
    app: unifi
  ports:
    - protocol: TCP
      port: 8443
      name: gui
  type: ClusterIP
