apps/unifi/unifi/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  namespace: unifi
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - unifi.mgmt.sholdee.net
  rules:
    - backendRefs:
        - name: unifi-ui
          namespace: unifi
          port: 8443
