apps/unifi/unifi/manifests/tcproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: unifi-inform
  namespace: unifi
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: unifi-inform
  rules:
    - backendRefs:
        - name: unifi-inform
          namespace: unifi
          port: 8080
