apps/unifi/unifi/manifests/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: unifi
  namespace: unifi
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: unifi-tls
  hostnames:
  - "unifi.mgmt.sholdee.net"
  rules:
  - backendRefs:
    - name: unifi-service
      namespace: unifi
      port: 8443
